<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".ShopActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:adjustViewBounds="true"
            android:contentDescription="Szonyeg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/itemTitle"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/item_placeholder"
            android:textColor="?android:textColorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemImage"
            app:layout_constraintVertical_bias="0.0" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemTitle"
            android:layout_marginTop="8dp"
            android:isIndicator="true"
            android:numStars="5"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemTitle"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/itemDescription"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBar"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/itemDescriptionPH"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/itemPrice"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemDescription"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/itemPricePH"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemDescription"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/addToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemPrice"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="Add to cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemPrice"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addToCart"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:text="Delete from database"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addToCart"
            app:layout_constraintVertical_bias="0.0" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>